--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,21 @@
+version: '3.8'
+
 services:
-  backend:
-    build: ./ATHM-backend
-    container_name: athm_backend
+  api:
+    build: ./ATHM-backend  
+    container_name: athm-backend
     ports:
       - "5000:5000"
     environment:
       - PORT=5000
-      - JWT_SECRET=supersecretkey123
-      - MONGO_URI=${MONGO_URI}
-    networks:
-      - app-network
+      - MONGO_URI=mongodb+srv://abdulrafay:rafay@cluster0.wlcpcro.mongodb.net/ATHM_DB?retryWrites=true&w=majority
+      - JWT_SECRET=your_super_secret_key
+      - NODE_ENV=production
 
-  frontend:
-    build: ./ATHM-frontend
-    container_name: athm_frontend
+  client:
+    build: ./ATHM-frontend  
+    container_name: athm-frontend
     ports:
       - "5173:5173"
-    networks:
-      - app-network
-
-networks:
-  app-network:
-    driver: bridge
+    depends_on:
+      - api
